--- a/src/assets/styles/main.css
+++ b/src/assets/styles/main.css
@@ -1473,7 +1473,7 @@ span.ismobile {
   margin-top: 25px;
 }
 .setting-drwer {
-  background: #fff;
+  background: rgb(213, 201, 201);
   border-radius: 50%;
   bottom: 42px;
   right: 30px;
